--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 /* Whole document */
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 800px;
     margin: auto;
     background: #FFFFFF;
     padding: 10px 10px 10px 10px;
@@ -22,11 +21,6 @@ h1 {
     color: #757575;
     text-align:center;
     margin-bottom:15px;
-}
-h1:hover {
-    background-color: #757575;
-    color: #FFFFFF;
-    text-shadow: 1px 1px 1px #333;
 }
 
 /* Titles of categories */
@@ -42,17 +36,12 @@ h2:before {
     height: 10px;
     background-color: #9CB770;
 }
-h2:hover {
-    background-color: #397249;
-    color: #FFFFFF;
-    text-shadow: 1px 1px 1px #333;
-}
 
 /* Definitions */
 dt {
     float: left;
     clear: left;
-    width: 17%;
+    width: 8rem;
     /*font-weight: bold;*/
 }
 dd {
